--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>ND kvadratai</title>
 </head>
 <body>
-    CONTENT
+    <div style="border: 5px solid red; width: 60%; margin-top: 50px; margin-left: 20%; display: inline-block;">
+        <div style="border: 3px solid blue; width: calc(100% - (3px * 2)); float: left;">
+            <div style="border: 2px solid red; width: 20%; float: left;">LOGO</div>
+            <div style="border: 2px solid red; width: 50%; float: right;">NAV</div>
+        </div>
+        <div style="border: 7px solid yellow; padding: 13px; width: calc(100% - 40px); float: left;">
+            <div style="border: 2px solid red; width: calc(50% - 4px); float: left;">
+                <div style="border: 2px solid green; width: 70%; float: left;">1 Lorem ipsum dolor sit amet.</div>
+                <div style="border: 2px solid green; width: 70%; float: right;">2 Lorem ipsum dolor sit amet.</div>
+                <div style="border: 2px solid green; width: 70%; float: left;">3 Lorem ipsum dolor sit amet.</div>
+            </div>
+            <div style="border: 2px solid red; width: calc(50% - 4px); float: right;">
+                <div style="border: 2px solid green; width: 70%; float: right;">4 Lorem ipsum dolor sit amet.</div>
+                <div style="border: 2px solid green; width: calc(50% - 4px); float: left;">5 Lorem ipsum dolor sit amet.</div>
+                <div style="border: 2px solid green; width: calc(50% - 4px); float: left;">6 Lorem ipsum dolor sit amet.</div>
+                <div style="border: 2px solid green; width: 70%; float: left;">7 Lorem ipsum dolor sit amet.</div>
+            </div>
+        </div>
+        <div style="border: 2px solid blue; float: left;">
+            <div style="border: 2px solid violet; width: 35%; float: left;">Lorem ipsum dolor sit amet.</div>
+            <div style="border: 2px solid violet; width: 35%; float: right;">Lorem ipsum dolor sit amet.</div>
+        </div>
+    </div>
 </body>
 </html>
